--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,6 +215,10 @@ a {
     border: #000000;
     border-bottom: 2px solid black;
   }
+
+  .home__info{
+    max-width: 400px;
+  }
   
 }
 
@@ -285,6 +289,15 @@ a {
 
 
 /*=============== HOME ===============*/
+#home{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .home__container{
   padding-top: 2rem;
 }
@@ -332,6 +345,7 @@ a {
   place-items: center;
   border: 2px black solid;
   border-radius: 10px;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
   transition: background-color .3s;
 }
 
@@ -349,17 +363,19 @@ a {
 }
 
 .home__description b{
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background-color: var(--bittersweet-color);
   border: 2px black solid;
   padding: 0 0.5rem;
   border-radius: 10px;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
 }
 
 .home__scroll{
   display: block;
   width: max-content;
   margin: 0 auto;
+  margin-bottom: 1.25rem;
 }
 
 .home__scroll-text{
@@ -376,6 +392,7 @@ a {
   place-items: center;
   border: 2px black solid;
   border-radius: 10px;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
   cursor: pointer;
   overflow: hidden;
   transition: background-color .4s;
@@ -403,10 +420,58 @@ a {
 
 
 /*=============== BUTTON ===============*/
+.button{
+  display: flex;
+  color: var(--black-color);
+  align-items: center;
+  justify-content: center;
+  font-size: 1.25rem;
+  background-color: var(--bittersweet-color);
+  border: 2px black solid;
+  border-radius: 10px;
+  padding: 0.25em 1em;
+  text-align: center;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+}
 
+.about__buttons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 /*=============== ABOUT ===============*/
+.about__container{
+  row-gap: 0;
+}
 
+.about__perfil{
+  position: relative;
+  justify-self: center;
+  margin-block: 2.5rem 4.5rem;
+}
+
+.about__image{
+  width: 220px;
+}
+
+.about__img{
+  width: 220px;
+  border: 2px black solid;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+}
+
+.about__info{
+  padding-left: 1rem;
+}
+
+.about__description{
+  position: relative;
+  margin-bottom: 1.5rem;
+  text-align: justify;
+}
 
 /*=============== SERVICES ===============*/
 
