--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -360,6 +360,7 @@ a {
 .home__description{
   text-align:justify;
   margin-bottom: 1.5rem;
+  line-height: 1.75;
 }
 
 .home__description b{
@@ -441,6 +442,15 @@ a {
 }
 
 /*=============== ABOUT ===============*/
+#about{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .about__container{
   row-gap: 0;
 }
@@ -474,7 +484,57 @@ a {
 }
 
 /*=============== SERVICES ===============*/
+.services__container{
+  grid-template-columns: 250px;
+  justify-content: center;
+  row-gap: 2rem;
+  padding-top: 1rem;
+}
 
+.services__card{
+  position: relative;
+}
+
+.services__card:hover{
+  transform: translate(0.5rem, 0.5rem);
+}
+
+.services__content{
+  height: 100%;
+  background-color: var(--pear-color);
+  border: 2px black solid;
+  border-radius: 10px;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+  padding: 6rem 1rem 3rem;
+  position: relative;
+  transition: background-color .4s, border 4s;
+} 
+
+.services__icon{
+  position: relative;
+  display: inline-block;
+}
+
+.services__icon i{
+  font-size: 2rem;
+  color: var(--black-color);
+  position: relative;
+  z-index: 5;
+}
+
+.services__box{
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background-color: var(--bittersweet-color);
+  right: -2px;
+  top: -2px;
+}
+
+.services__title{
+  font-size: var(--h2-font-size);
+  margin-bottom: 1.25rem;
+}
 
 /*=============== PROJECTS ===============*/
 
