--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,18 +2,18 @@
   --header-height: 3.5rem;
 
   /*========== Colors ==========*/
-  --champagne-pink-color: #FFE2D1;
-  --white-color: #FFFFFF;
+  --champagne-pink-color: #ffe2d1;
+  --white-color: #ffffff;
   --black-color: #000000;
-  --pear-color: #B8DD2D;
-  --sea-green-color: #058C42;
-  --bittersweet-color: #FE5F55;
+  --pear-color: #b8dd2d;
+  --sea-green-color: #058c42;
+  --bittersweet-color: #fe5f55;
   --eerie-black: #707070;
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Poppins';
-  --biggest-font-size: 2.5rem;
+  --body-font: "Poppins";
+  --biggest-font-size: 3.25rem;
   --h1-font-size: 1.75rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1.125rem;
@@ -40,8 +40,8 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -57,12 +57,15 @@ html {
 }
 
 body {
-  font-family: var(--body-font);;
+  font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--champagne-pink-color);
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: var(--black-color);
   font-weight: var(--font-bold);
 }
@@ -83,15 +86,12 @@ a {
 
 /*=============== THEME ===============*/
 
-
 /*========== Variables Dark theme ==========*/
-
 
 /*========== 
 	Color changes in some parts of 
 	the website, in dark theme
 ==========*/
-
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -108,26 +108,26 @@ a {
   padding-block: 4rem 2rem;
 }
 
-.section__title-1, 
+.section__title-1,
 .section__title-2 {
   position: relative;
   font-size: var(--h1-font-size);
   width: max-content;
-  margin: .75rem auto 2rem;
+  margin: 0.75rem auto 2rem;
 }
 
-.section__title-1 span, 
+.section__title-1 span,
 .section__title-2 span {
   z-index: 5;
   position: relative;
 }
 
-.section__title-1::after, 
+.section__title-1::after,
 .section__title-2::after {
   content: "";
   width: 40px;
   height: 28px;
-  background-color: hsla(14, 98%, 50%, .2);
+  background-color: hsla(14, 98%, 50%, 0.2);
   position: absolute;
   top: -4px;
   right: -8px;
@@ -168,7 +168,7 @@ a {
   left: 0;
   background-color: var(--white-color);
   z-index: var(--z-fixed);
-  transition: box-shadow .4s;
+  transition: box-shadow 0.4s;
   border-bottom: 2px solid black;
 }
 
@@ -182,14 +182,14 @@ a {
 
 .nav__logo {
   display: flex;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
   align-items: center;
   font-weight: var(--font-semi-bold);
   color: black;
 }
 
 .nav__logo-circle,
-.nav__toggle{
+.nav__toggle {
   width: 32px;
   height: 32px;
   display: grid;
@@ -202,8 +202,8 @@ a {
 }
 
 /* Navigation for mobile devices */
-@media screen and (max-width: 1150px){
-  .nav__menu{
+@media screen and (max-width: 1150px) {
+  .nav__menu {
     position: fixed;
     top: -100%;
     left: 0;
@@ -211,19 +211,18 @@ a {
     width: 100%;
     padding-block: 1.8rem 5rem;
     text-align: center;
-    transition: top .4s;
+    transition: top 0.4s;
     border: #000000;
     border-bottom: 2px solid black;
   }
 
-  .home__info{
+  .home__info {
     max-width: 400px;
   }
-  
 }
 
 .nav__title,
-.nav__close{
+.nav__close {
   color: var(--black-color);
 }
 
@@ -261,7 +260,7 @@ a {
   color: var(--black-color);
   font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
-  transition: color .3s;
+  transition: color 0.3s;
 }
 
 .nav__link:hover {
@@ -281,15 +280,12 @@ a {
   top: 0;
 }
 
-
 /* Add shadow header */
-
 
 /* Active link */
 
-
 /*=============== HOME ===============*/
-#home{
+#home {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -298,34 +294,66 @@ a {
   height: 100vh;
 }
 
-.home__container{
+.home__container {
   padding-top: 2rem;
 }
 
-.home__name{
+.home__name {
   font-size: var(--biggest-font-size);
+  letter-spacing: -4px;
+  color: #fe5f55;
+  font-weight: 900;
   text-align: center;
+  text-shadow: 3px 4px 0px rgba(0, 0, 0, 1);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
 }
 
-.home__perfil{
+/* .home__name::after,
+.home__name::before {
+  content: "";
+  width: 15px;
+  height: 2px;
+  background-color: var(--sea-green-color);
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%); 
+}
+
+.home__name::before {
+  left: initial;
+  right: 1rem;
+}
+
+.home__name-container {
+  position: relative;
+  height: fit-content;
+  width: fit-content;
+  padding-left: 5em;
+  padding-right: 5em;
+  background-color: #b8dd2d;
+} */
+
+.home__perfil {
   position: relative;
   justify-self: center;
   top: 1.5rem;
-  left: -.7rem;
+  left: -0.7rem;
   z-index: 10;
 }
 
-.home__image{
+.home__image {
   width: 220px;
 }
 
-.home__img{
+.home__img {
   position: relative;
   z-index: 10;
   width: 220px;
 }
 
-.home__social{
+.home__social {
   height: max-content;
   position: absolute;
   right: -4rem;
@@ -336,7 +364,7 @@ a {
   row-gap: 1rem;
 }
 
-.home__social-link{
+.home__social-link {
   background-color: var(--sea-green-color);
   color: var(--white-color);
   font-size: 1.25rem;
@@ -346,24 +374,24 @@ a {
   border: 2px black solid;
   border-radius: 10px;
   box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
-  transition: background-color .3s;
+  transition: background-color 0.3s;
 }
 
-.home__social-link:hover{
+.home__social-link:hover {
   background-color: var(--black-color);
 }
 
-.home__info{
+.home__info {
   margin-top: 4rem;
 }
 
-.home__description{
-  text-align:justify;
+.home__description {
+  text-align: justify;
   margin-bottom: 1.5rem;
   line-height: 1.75;
 }
 
-.home__description b{
+.home__description b {
   font-size: 1.25rem;
   background-color: var(--bittersweet-color);
   border: 2px black solid;
@@ -372,18 +400,18 @@ a {
   box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
 }
 
-.home__scroll{
+.home__scroll {
   display: block;
   width: max-content;
   margin: 0 auto;
   margin-bottom: 1.25rem;
 }
 
-.home__scroll-text{
+.home__scroll-text {
   display: none;
 }
 
-.home__scroll-box{
+.home__scroll-box {
   background-color: var(--sea-green-color);
   color: var(--white-color);
   font-size: 1rem;
@@ -396,32 +424,31 @@ a {
   box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
   cursor: pointer;
   overflow: hidden;
-  transition: background-color .4s;
+  transition: background-color 0.4s;
 }
 
-.home__scroll-box i{
+.home__scroll-box i {
   animation: scroll-down 3s infinite;
 }
 
 /* Animate scroll icon */
-@keyframes scroll-down{
-  0%{
+@keyframes scroll-down {
+  0% {
     transform: translateY(-1rem);
     opacity: 0;
   }
-  50%{
+  50% {
     transform: translateY(0);
     opacity: 1;
   }
-  100%{
-    transform: translateY(.6rem);
+  100% {
+    transform: translateY(0.6rem);
     opacity: 0;
   }
 }
 
-
 /*=============== BUTTON ===============*/
-.button{
+.button {
   display: flex;
   color: var(--black-color);
   align-items: center;
@@ -435,14 +462,14 @@ a {
   box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
 }
 
-.about__buttons{
+.about__buttons {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 /*=============== ABOUT ===============*/
-#about{
+#about {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -451,21 +478,21 @@ a {
   height: 100vh;
 }
 
-.about__container{
+.about__container {
   row-gap: 0;
 }
 
-.about__perfil{
+.about__perfil {
   position: relative;
   justify-self: center;
   margin-block: 2.5rem 4.5rem;
 }
 
-.about__image{
+.about__image {
   width: 220px;
 }
 
-.about__img{
+.about__img {
   width: 220px;
   border: 2px black solid;
   border-radius: 10px;
@@ -473,33 +500,33 @@ a {
   box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
 }
 
-.about__info{
+.about__info {
   padding-left: 1rem;
 }
 
-.about__description{
+.about__description {
   position: relative;
   margin-bottom: 1.5rem;
   text-align: justify;
 }
 
 /*=============== SERVICES ===============*/
-.services__container{
+.services__container {
   grid-template-columns: 250px;
   justify-content: center;
   row-gap: 2rem;
   padding-top: 1rem;
 }
 
-.services__card{
+.services__card {
   position: relative;
 }
 
-.services__card:hover{
+.services__card:hover {
   transform: translate(0.5rem, 0.5rem);
 }
 
-.services__content{
+.services__content {
   height: 100%;
   background-color: var(--pear-color);
   border: 2px black solid;
@@ -507,22 +534,22 @@ a {
   box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
   padding: 6rem 1rem 3rem;
   position: relative;
-  transition: background-color .4s, border 4s;
-} 
+  transition: background-color 0.4s, border 4s;
+}
 
-.services__icon{
+.services__icon {
   position: relative;
   display: inline-block;
 }
 
-.services__icon i{
+.services__icon i {
   font-size: 2rem;
   color: var(--black-color);
   position: relative;
   z-index: 5;
 }
 
-.services__box{
+.services__box {
   position: absolute;
   width: 24px;
   height: 24px;
@@ -531,40 +558,30 @@ a {
   top: -2px;
 }
 
-.services__title{
+.services__title {
   font-size: var(--h2-font-size);
   margin-bottom: 1.25rem;
 }
 
 /*=============== PROJECTS ===============*/
 
-
 /*=============== CONTACT ===============*/
-
 
 /* Opaque placeholder */
 
-
 /* Move label up & sticky label */
-
 
 /*=============== FOOTER ===============*/
 
-
 /*=============== SCROLL BAR ===============*/
-
 
 /*=============== SCROLL UP ===============*/
 
-
 /* Show Scroll Up */
-
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 
-
 /* For medium devices */
-
 
 /* For large devices */
