--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,8 @@
   --pear-color: #b8dd2d;
   --sea-green-color: #058c42;
   --bittersweet-color: #fe5f55;
-  --eerie-black: #707070;
+  --lighter-grey: #F5F5F5;
+  --light-grey: #cccccc;
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -572,6 +573,94 @@ a {
 }
 
 /*=============== PROJECTS ===============*/
+.projects__container{
+  row-gap: 2rem;
+}
+
+.projects__card{
+  padding: 1rem 1rem 2rem;
+  transition: background-color .4s;
+  background-color: var(--bittersweet-color);
+  border: 2px black solid;
+  border-radius: 10px;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+}
+
+.projects__image{
+  position: relative;
+  margin-bottom: 0.75rem;
+}
+
+.projects__img{
+  width: 100%;
+  border: 2px black solid;
+  border-radius: 10px;
+}
+
+.projects__title{
+  letter-spacing: -2px;
+  color: var(--pear-color);
+  font-weight: 900;
+  text-align: right;
+  text-shadow: 3px 4px 0px rgba(0, 0, 0, 1);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  font-size: var(--h1-font-size);
+  margin-bottom: .75rem;
+
+}
+
+
+.projects__buttons{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.projects__content{
+  margin-bottom: 1.25rem;
+}
+
+.projects__description{
+  text-align: justify;
+}
+
+.projects__subtitle{
+  font-size: var(--small-font-size);
+  margin-bottom: 0.5rem;
+}
+
+.projects__link{
+  display: flex;
+  align-items: center;
+  column-gap: .25rem;
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+  transition: color .4s;
+  background-color: var(--sea-green-color);
+  padding: 0.5rem;
+  border: 2px black solid;
+  border-radius: 10px;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+}
+
+.projects__link:hover{
+  background-color: var(--pear-color);
+}
+
+.projects__card:hover{
+  transform: translate(0.25rem, 0.25rem);
+}
+
+.projects__card:hover .projects__img{
+  transform: scale(1.5);
+}
+
+
+
+
+
+
 
 /*=============== CONTACT ===============*/
 
@@ -580,8 +669,53 @@ a {
 /* Move label up & sticky label */
 
 /*=============== FOOTER ===============*/
+.footer{
+  background-color: var(--sea-green-color);
+  border-top: 2px solid black;
+}
+
+.footer__container{
+  padding-block: 3rem 2rem;
+  row-gap: 2.5rem;
+}
+
+.footer__links{
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.footer__link{
+  color: var(--white-color);
+  transition: color .4s;
+}
+
+.footer__link:hover{
+  color: var(--pear-color);
+}
+
+.footer__copy{
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  text-align: center;
+}
+
+.footer__copy a{
+  color: var(--pear-color);
+  font-weight: bold;
+}
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: var(--lighter-grey);
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: .5rem;
+  background-color: var(--light-grey);
+}
 
 /*=============== SCROLL UP ===============*/
 
@@ -589,7 +723,157 @@ a {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 340px) {
+  .container{
+    margin-inline: 1rem
+  }
+
+  .home__image{
+    width: 180px;
+  }
+
+  .about__image{
+    width: 180px;
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 576px) {
+  .home__container,
+  .about__container,
+  .projects__container{
+    grid-template-columns: 350px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .services__container{
+    grid-template-columns: repeat(2, 250px);
+  }
+
+  .projects__container{
+    grid-template-columns: repeat(2, 350px);
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 1150px) {
+  .container{
+    margin-inline: auto;
+  }
+
+  .section{
+    padding-block: 7rem 2rem;
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 0.75rem);
+    column-gap: 4rem;
+  }
+
+  .nav__close,
+  .nav__toggle,
+  .nav__title,
+  .nav       __name{
+    display: none;
+  }
+
+  .nav__list{
+    flex-direction: row;
+    column-gap: 4rem;
+  }
+  .nav__menu{
+    margin-left: auto;
+  }
+  .nav__link{
+    color: var(--black-color);
+    font-size: var(--normal-font-size);
+  }
+
+  .home__container{
+    grid-template-columns: repeat(2, 460px);
+    gap: 2rem 4rem;
+    align-items: center;
+    padding-block: 5.5rem;
+  }
+
+  .home__perfil{
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    top: -3.5rem;
+  }
+
+  .home__image{
+    width: 350px;
+  }
+
+  .home__name,
+  .about__description{
+    text-align: initial;
+  }
+
+  .home__name{
+    align-self: flex-end;
+  }
+
+  .home__info{
+    margin-top: 0;
+    align-self: flex-start;
+  }
+
+  .home__description{
+    position: relative;
+    font-size: var(--h2-font-size);
+    margin-bottom: 5.5rem;
+    padding-left: 3rem;
+  }
+
+  .home__description::after{
+    content: '';
+    width: 32px;
+    height: 2px;
+    background-color: var(--black-color);
+    position: absolute;
+    left: 0;
+    top: 14px;
+  }
+
+  .home__description b {
+    font-size: 1.75rem;
+  }
+
+  .home__scroll{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    column-gap: .75rem;
+  }
+
+  .home__scroll-text{
+    display: block;
+    color: var(--black-color);
+  }
+
+  .home__scroll-box{
+    width: 44px;
+    height: 44px;
+  }
+
+  .home__scroll-box i{
+    font-size: 1.25rem;
+  }
+
+  .home__img {
+    width: 350px;
+  }
+
+  .home__social{
+    left: initial;
+    right: -5rem;
+  }
+  .home__social-link{
+    font-size: 1.5rem;
+    padding: .5rem;
+  }
+}
