--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -121,22 +121,13 @@ a {
 .section__title-2 span {
   z-index: 5;
   position: relative;
-}
-
-.section__title-1::after,
-.section__title-2::after {
-  content: "";
-  width: 40px;
-  height: 28px;
-  background-color: hsla(14, 98%, 50%, 0.2);
-  position: absolute;
-  top: -4px;
-  right: -8px;
-}
-
-.section__title-2::after {
-  top: initial;
-  bottom: -4px;
+  letter-spacing: -2px;
+  color: #fe5f55;
+  font-weight: 900;
+  text-align: center;
+  text-shadow: 3px 4px 0px rgba(0, 0, 0, 1);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
 }
 
 .geometric-box {
@@ -646,14 +637,11 @@ a {
 
 .projects__link:hover{
   background-color: var(--pear-color);
+  transform: translate(0.25rem, 0.25rem);
 }
 
 .projects__card:hover{
   transform: translate(0.25rem, 0.25rem);
-}
-
-.projects__card:hover .projects__img{
-  transform: scale(1.5);
 }
 
 
@@ -876,4 +864,83 @@ a {
     font-size: 1.5rem;
     padding: .5rem;
   }
+
+
+
+  .about__container{
+    grid-template-columns: 440px 525px;
+    gap: 1rem 9rem;
+    align-items: center;
+    padding-block: 1rem;
+  }
+  .about__perfil{
+    order: -1;
+    grid-row: 1 / 3;
+  }
+  .about__image{
+    width: 350px;
+  }
+  .about__img{
+    width: 400px;
+  }
+  .about__info{
+    align-self: flex-start;
+    padding-left: 3rem;
+  }
+  .about__description{
+    font-size: var(--h3-font-size);
+    margin-bottom: 2rem;
+    text-align: justify;
+  }
+  .about__description::after{
+    width: 32px;
+    height: 2px;
+    left: -3rem;
+    top: 14px;
+    content: '';
+    background-color: var(--black-color);
+    position: absolute;
+  }
+
+
+  .services__container{
+    grid-template-columns: repeat(3, 282px);
+    column-gap: 5rem;
+    padding-block: 3rem 5rem;
+  }
+  .services__content{
+    grid-template-columns: repeat(3, 282px);
+    column-gap: 5rem;
+    padding-block: 3rem 5rem;
+  }
+  .services__icon i{
+    font-size: 3rem;
+  }
+  .services__box{
+    width: 32px;
+    height: 32px;
+  }
+  .services__title{
+    margin-bottom: 1.5rem;
+  }
+
+
+
+  .projects__container{
+    grid-template-columns: repeat(3, 352px);
+    padding-block: 3rem 1rem;
+  }
+  .projects__card{
+    padding: 1.25rem 1.25rem 2.5rem;
+  }
+  .projects__image{
+    margin-bottom: 1rem;
+  }
+  .projects__content{
+    margin-bottom: 2rem;
+  }
+  .projects__title{
+    font-size: 2rem;
+  }
+
 }
