--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -497,7 +497,7 @@ a {
   border: 2px black solid;
   border-radius: 10px;
   position: relative;
-  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+  box-shadow: 4px 6px 0px 0px rgb(0, 0, 0, 1);
 }
 
 .about__info {
@@ -619,6 +619,7 @@ a {
 .projects__subtitle{
   font-size: var(--small-font-size);
   margin-bottom: 0.5rem;
+  text-align: justify;
 }
 
 .projects__link{
@@ -651,6 +652,48 @@ a {
 
 
 /*=============== CONTACT ===============*/
+#contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.contact__container{
+  grid-template-columns: 320px;
+}
+
+.contact__description{
+  text-align: justify;
+  margin-bottom: 1.5rem;
+}
+
+
+.contact__button{
+  display: flex;
+  color: var(--black-color);
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bittersweet-color);
+  border: 2px black solid;
+  border-radius: 10px;
+  padding: 0.25em 1em;
+  text-align: center;
+  box-shadow: 2px 3px 0px 0px rgb(0, 0, 0, 1);
+  font-weight: bold;
+  transition: background-color 0.3s;
+  margin-top: 1rem;
+}
+
+.contact__button:hover{
+  transform: translate(0.25rem, 0.25rem);
+  background-color: var(--pear-color);
+}
+
+
+
 
 /* Opaque placeholder */
 
@@ -729,7 +772,8 @@ a {
 @media screen and (min-width: 576px) {
   .home__container,
   .about__container,
-  .projects__container{
+  .projects__container,
+  .contact__container{
     grid-template-columns: 350px;
     justify-content: center;
   }
